--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && next export",
+    "deploy": "npm run build && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin main && npx gh-pages -d out",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +29,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "eslint-plugin-import": "^2.31.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
