add setup store and implement redux state managment, provide refactor for all components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/redux/actions.ts",
+    "app/redux/store.ts"
+  ],
   "exclude": ["node_modules", "docs"]
 }
